Updated iframe style and router

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,6 +60,10 @@ button:hover {
     border-radius: 0.35rem;
 }
 
+iframe {
+    max-width: 100vh;
+    max-height: 100vh;
+}
 
 /* --------------------------- Navbar ----------------------------*/
 /* ---------------------------------------------------------------*/
