--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,9 +65,13 @@ iframe {
     max-height: 100%
 }
 
+img {
+    max-width: 90%;
+    max-height: 100%;
+}
+
 /* --------------------------- Navbar ----------------------------*/
 /* ---------------------------------------------------------------*/
-
 
 hr.navbar {
     border-color: var(--dark-accent);
@@ -121,9 +125,13 @@ div.aboutPage a:hover {
 
 /* --------------------------- Videos ----------------------------*/
 /* ---------------------------------------------------------------*/
-/*div.videos iframe {
-    
-}*/
+div.videos {
+    align-items: center;
+}
+
+div.videos iframe {
+    margin: 0.25rem;
+}
 
 
 /* --------------------------- 404 Page --------------------------*/
