--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,7 +80,7 @@ img {
     display: inline-block;
 }
 
-.dropdown button {
+button.dropdown {
     background: none;
     border: none;
     padding: 0;
@@ -103,14 +103,20 @@ img {
 }
 
 .dropdown-content {
-    background: #747474;
-    border: 1px solid #ddd;
-    z-index: 1;
+    background: var(--background-secondary);
+    border: 2px solid var(--light-accent);
     overflow-y: auto;
+    display: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    position: absolute;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: inline-block;
+    top: 19px;
+    left: 4px;
 }
 
 a.dropdown {
@@ -120,12 +126,18 @@ a.dropdown {
 
 a.dropdown:hover {
     text-decoration: underline;
-    text-decoration-color: var(--dark-accent)
+    text-decoration-color: var(--light-accent)
 }
 
 
 /* --------------------------- Navbar ----------------------------*/
 /* ---------------------------------------------------------------*/
+.stickynav {
+    position: sticky;
+    top: 0px;
+    width: 100%;
+    background-color: var(--background-primary);
+}
 
 hr.navbar {
     border-color: var(--dark-accent);
