Updated datacard to not display without data

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -301,6 +301,7 @@ div.choiceButtons button {
 /* ------------ DataCards -----------*/
 div.dataCard {
     margin: auto;
+    margin-top: 1rem;
     width: 300px;
     height: max-content;
     max-width: 90%;
