--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,6 +77,26 @@ iframe {
     font-weight: bold;
 }
 
+/* --------------------------- Scroll Bar ----------------------------*/
+/* -----------------------------------------------------------------*/
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px var(--dark-accent);
+    border-radius: 4px;
+    height: 300px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--dark-accent);
+    border-radius: 4px;
+  }
+
 
 /* --------------------------- Dropdown ----------------------------*/
 /* -----------------------------------------------------------------*/
